Fixed navbar spacing and styled chatbox messages

--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -8,9 +8,9 @@
   color: white;
   position: fixed;
   width: 300px;
-  left: 50%;
+  left: 85%;
   margin-left: -150px;
-  top: 60px;
+  top: 80px;
   z-index: 100;
 }
 .alert-info {
