--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -7,7 +7,7 @@
   margin: 0;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-between !important;
   transition: all 0.3s ease;
   .avatar {
     width: 50px;
@@ -34,76 +34,77 @@
   justify-content: space-between;
 }
 
-  /* Competition button */
-  .navbar-competition-btn {
-    background-color: #58D063;
-    opacity: 0.9;
-    color: white;
-    border: none;
-    width: 180px;
-    padding: 7px;
-    margin: 0 5px;
-    border-radius: 3px;
-    box-shadow: 1px 1px 3px rgba(80,80,80,0.25);
-  }
+/* Competition button */
+.navbar-competition-btn {
+  background-color: #58D063;
+  opacity: 0.9;
+  color: white;
+  border: none;
+  width: 180px;
+  padding: 7px;
+  margin: 0 5px;
+  border-radius: 3px;
+  box-shadow: 1px 1px 3px rgba(80,80,80,0.25);
+}
 
-  /* Team button */
-  .navbar-team-btn {
-    background-color: #BCBCBC;
-    opacity: 0.8;
-    width: 180px;
-    color: white;
-    border: none;
-    padding: 7px;
-    margin: 0 5px;
-    border-radius: 3px;
-    box-shadow: 1px 1px 3px rgba(80,80,80,0.25);
-  }
+/* Team button */
+.navbar-team-btn {
+  background-color: #BCBCBC;
+  opacity: 0.8;
+  width: 180px;
+  color: white;
+  border: none;
+  padding: 7px;
+  margin: 0 5px;
+  border-radius: 3px;
+  box-shadow: 1px 1px 3px rgba(80,80,80,0.25);
+}
 
 /* Navbar right section */
-  .navbar-right {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
+.navbar-right {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding-left: 450px;
+}
 
-  /* Navbar avatar */
-  .navbar-avatar {
-    flex: 0 1 auto;
-    cursor: pointer;
-    padding: 0 20px;
-  }
+/* Navbar avatar */
+.navbar-avatar {
+  flex: 0 1 auto;
+  cursor: pointer;
+  padding: 0 20px;
+}
 
-    /* Navbar dropdown menu */
-    .navbar-wagon-dropdown-menu {
-      margin-top: 15px;
-      box-shadow: 1px 1px 4px #E6E6E6;
-      border-color: #E6E6E6;
-    }
-    .navbar-wagon-dropdown-menu li > a {
-      transition: color 0.3s ease;
-      font-weight: lighter !important;
-      color: #999999 !important;
-      font-size: 15px !important;
-      line-height: 22px !important;
-      padding: 10px 20px;
-    }
-    .navbar-wagon-dropdown-menu li > a:hover {
-      background: transparent !important;
-      color: black !important;
-    }
-    .navbar-wagon-dropdown-menu:before {
-      content: ' ';
-      height: 10px;
-      width: 10px;
-      position: absolute;
-      right: 10px;
-      top: -6px;
-      background-color: white;
-      transform: rotate(45deg);
-      border-left: 1px solid #E6E6E6;
-      border-top: 1px solid #E6E6E6;
-    }
+/* Navbar dropdown menu */
+.navbar-wagon-dropdown-menu {
+  margin-top: 15px;
+  box-shadow: 1px 1px 4px #E6E6E6;
+  border-color: #E6E6E6;
+}
+.navbar-wagon-dropdown-menu li > a {
+  transition: color 0.3s ease;
+  font-weight: lighter !important;
+  color: #999999 !important;
+  font-size: 15px !important;
+  line-height: 22px !important;
+  padding: 10px 20px;
+}
+.navbar-wagon-dropdown-menu li > a:hover {
+  background: transparent !important;
+  color: black !important;
+}
+.navbar-wagon-dropdown-menu:before {
+  content: ' ';
+  height: 10px;
+  width: 10px;
+  position: absolute;
+  right: 10px;
+  top: -6px;
+  background-color: white;
+  transform: rotate(45deg);
+  border-left: 1px solid #E6E6E6;
+  border-top: 1px solid #E6E6E6;
+}
 
 
 
